rnsc/test_data/integration/error/parser/class_body/with_errors_before_class_body.rns
.method shouldn't be here
.class 42
unexpected
